Add shamir39 tool

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
                 </ul>
             </li>
             <li>
+                <p>Shamir39 Tool</p>
+                <ul>
+                    <li>
+                        <a href="/shamir39/">Site</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iancoleman/shamir39">Source code</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iancoleman/shamir39/blob/master/specification.md">Draft Specification</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <p>CIA World Factbook API</p>
                 <ul>
                     <li>
