--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
                 </ul>
             </li>
             <li>
+                <p>Group Size Calculator</p>
+                <ul>
+                    <li>
+                        <a href="/groupsize/">Calculator</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iancoleman/groupsize_calculator">Source code</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
                 <p>Multisig Tool</p>
                 <ul>
                     <li>
