--- a/groupsize/index.html
+++ b/groupsize/index.html
@@ -704,6 +704,25 @@
         </div>
         </div>
 
+        <div class="discussion">
+            <h2>Discussion</h2>
+            <div>
+            There's a discussion of this calculator.
+            </div>
+            <div>
+            <a href="https://safenetforum.org/t/group-size-security-calculator/16344">
+                https://safenetforum.org/t/group-size-security-calculator/16344
+            </a>
+            </div>
+            <div>
+            The code is available for review or submitting issues or pull requests.
+            </div>
+            <div>
+            <a href="https://github.com/iancoleman/groupsize_calculator">
+                https://github.com/iancoleman/groupsize_calculator
+            </a>
+        </div>
+
         <div class="reading">
         <h2>Further Reading</h2>
         <div>Security of Close Group Consensus is a very well discussed topic.</div>
