Add link to CIA World Factbook explorer

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                         <a href="https://www.github.com/iancoleman/cia_world_factbook_api#data">Latest and Historical Data</a>
                     </li>
                     <li>
+                        <a href="/explorer-cia-world-factbook/">Data Explorer</a>
+                    </li>
+                    <li>
                         <a href="/exploring-the-cia-world-factbook/">Examples</a>
                     </li>
                     <li>
